# haskell-project

./: .ghci  .gitignore  Init.hs  LICENSE  README.md  Setup.lhs  project.cabal
src/: Hello.hs
test/: Test.hs
