name:             project
version:          0.0.1
license:          MIT
license-file:     LICENSE
author:           Matt Freels <matt@freels.name>
maintainer:       Matt Freels <matt@freels.name>
homepage:         http://github/freels/haskell-project
cabal-version:    >= 1.14
build-type:       Simple

extra-source-files:
  README.md

source-repository head
  type:     git
  location: http://github.com/freels/haskell-project

-- flags

flag optimize
  description: apply compilation optimizations
  default:     True

-- build artifacts

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(optimize)
    ghc-options: -O2 -fspec-constr -funbox-strict-fields -fdicts-cheap

  build-depends:
    base >= 4 && < 6

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  cpp-options:      -DTEST
  ghc-options:      -Wall

  build-depends:
    base                       >= 4 && < 6,
    test-framework             == 0.6,
    test-framework-quickcheck2 == 0.2.12.2,
    test-framework-hunit       == 0.2.7,
    QuickCheck,
    HUnit
